# wordcountMPI

./: .gitignore  CMakeLists.txt  Makefile  README.md  fileManage.c  fileManage.h  run.sh  utils.c  utils.h  wc_mpi.c  wordManage.c  wordManage.h
docs/: README.md  compile.sh
files/: file5.txt  file6.txt
include/: wordManage.h
resources/: README.md
resources/STRONG/: efficienzaSTRONG.py  speedupSTRONG.py  tempoEsecuzioneStrong.py
resources/WEAK/: efficienzaWEAK.py
resources/large_files/: file7.txt
resources/small_files/: file2.txt  file3.txt  file4.txt
resources/tempi/: res_proc_1FILE.txt
small_files/: file2.txt  fileX.txt
src/: CMakeLists.txt  fileManage.c  utils.c  wc_mpi.c  wordManage.c
